reworked look to be based around dark grey, gold and blue

--- a/src/web.public/index.html
+++ b/src/web.public/index.html
@@ -13,6 +13,8 @@
 	
 	<!-- inject:appakin-styles --><link rel="stylesheet" href="/public/stylesheets/app-styles.css"><!-- endinject -->
 
+    <link href='http://fonts.googleapis.com/css?family=Bree+Serif' rel='stylesheet' type='text/css'>
+
     <!--[if lt IE 9]>
     <script src="/bower_components/html5shiv/dist/html5shiv.js"></script>
     <![endif]-->
