--- a/src/web.public/public/scripts/appakin/structure/akin-footer.html
+++ b/src/web.public/public/scripts/appakin/structure/akin-footer.html
@@ -1,12 +1,19 @@
-<p class="call-to-action"><a href="/raters">Help us and earn!&nbsp;&nbsp;Click for more info.</a></p>
-<div class="footer-nav">
-    <ul>
-        <li><a href="/">Home</a>&nbsp;&middot;&nbsp;</li>
-        <li><a href="/about">About</a>&nbsp;&middot;&nbsp;</li>
-        <li><a href="/terms">Terms</a>&nbsp;&middot;&nbsp;</li>
-        <li><a href="/privacy">Privacy & Cookies</a></li>
-    </ul>
+<div class="footer-call-to-action-wrapper">
+    <p class="call-to-action"><a href="/raters">Help us and earn!&nbsp;Click for more info.</a></p>
 </div>
-<div class="footer-copyright">
-    <p class="copyright">&copy; 2014 appAkin Ltd. All Rights Reserved.<img class="akin-logo" src="/public/images/appakin-logo-jade.png"></p>
+<div class="footer-background-wrapper">
+    <div class="rule"></div>
+    <div class="footer-centering-wrapper">
+        <div class="footer-nav">
+            <ul>
+                <li><a href="/">Home</a>&nbsp;&middot;&nbsp;</li>
+                <li><a href="/about">About</a>&nbsp;&middot;&nbsp;</li>
+                <li><a href="/terms">Terms</a>&nbsp;&middot;&nbsp;</li>
+                <li><a href="/privacy">Privacy & Cookies</a></li>
+            </ul>
+        </div>
+        <div class="footer-copyright">
+            <p class="copyright">&copy; 2014 appAkin Ltd. All Rights Reserved.<img class="akin-logo" src="/public/images/appakin-logo-grey.png"></p>
+        </div>
+    </div>
 </div>
