--- a/src/web.public/public/scripts/appakin/structure/akin-header.html
+++ b/src/web.public/public/scripts/appakin/structure/akin-header.html
@@ -6,7 +6,8 @@
 </div>
 <div ng-hide="location.path() === '/'" class="search-header-outer-wrapper">
     <div class="search-header-inner-wrapper">
-        <a href="/" class="akin-logo"><img src="/public/images/appakin-logo-grey.png"></a>
+        <a href="/" class="akin-logo"><img src="/public/images/appakin-logo-gold-light.png"></a>
         <div akin-searchbox class="searchbox-wrapper"></div>
     </div>
+    <div class="rule"></div>
 </div>
