removed all styling

--- a/src/web.public/index.html
+++ b/src/web.public/index.html
@@ -22,9 +22,9 @@
     <!--<link rel="apple-touch-icon" href="/my-icon.png" /> make it 144x144 -->
 </head>
 <body>
-    <header data-akin-header></header>
+    <!--<header data-akin-header></header>-->
     <main data-ng-view></main>
-    <footer data-akin-footer></footer>
+    <!--<footer data-akin-footer></footer>-->
 
     <script src="/bower_components/angular/angular.js"></script>
     <script src="/bower_components/angular-route/angular-route.js"></script>
