--- a/src/web.public/public/scripts/appakin/pages/app/app.html
+++ b/src/web.public/public/scripts/appakin/pages/app/app.html
@@ -1,4 +1,4 @@
-<div ng-show="app.data.name">
+<div id="app" class="main-wrapper" ng-show="app.data.name">
     <h1>{{app.data.name}} <span>for {{platform.getFriendlyName(app.data.platform)}}</span></h1>
     <p>{{app.data.desc}}</p>
     <ul ng-if="app.data.categories.length > 0">
