--- a/src/web.public/public/scripts/appakin/structure/akin-footer.html
+++ b/src/web.public/public/scripts/appakin/structure/akin-footer.html
@@ -6,14 +6,14 @@
     <div class="footer-centering-wrapper">
         <div class="footer-nav">
             <ul>
-                <li><a href="/">Home</a>&nbsp;&middot;&nbsp;</li>
-                <li><a href="/about">About</a>&nbsp;&middot;&nbsp;</li>
-                <li><a href="/terms">Terms</a>&nbsp;&middot;&nbsp;</li>
+                <li><a href="/">Home</a>&nbsp;&nbsp;&nbsp;</li>
+                <li><a href="/about">About</a>&nbsp;&nbsp;&nbsp;</li>
+                <li><a href="/terms">Terms</a>&nbsp;&nbsp;&nbsp;</li>
                 <li><a href="/privacy">Privacy & Cookies</a></li>
             </ul>
         </div>
         <div class="footer-copyright">
-            <p class="copyright">&copy; 2014 appAkin Ltd. All Rights Reserved.<img class="akin-logo" src="/public/images/appakin-logo-grey.png"></p>
+            <p class="copyright">&copy; 2014 appAkin Ltd. All Rights Reserved.<img class="akin-logo" src="/public/images/appakin-logo-gold-light.png"></p>
         </div>
     </div>
 </div>
