got autocomplete term submission working on iphone

--- a/src/web.public/public/scripts/appakin/search/akin-searchbox.html
+++ b/src/web.public/public/scripts/appakin/search/akin-searchbox.html
@@ -6,6 +6,7 @@
                           click-activation="true"
                           data="search.autoComplete.terms"
                           on-type="search.updateAutoCompleteTerms"
+                          on-select="submitSearch"
                           is-active="search.autoComplete.active"></autocomplete>
         </div>
         <div class="platform-menu btn-group" dropdown is-open="status.isOpen">
