Added iphone desktop icons

--- a/src/web.public/index.html
+++ b/src/web.public/index.html
@@ -13,6 +13,13 @@
 
 	<!-- inject:appakin-styles --><link rel="stylesheet" href="/public/stylesheets/app-styles.css"><!-- endinject -->
 
+    <link rel="shortcut icon" type="image/png" href="/public/images/favicon.png" />
+    <link rel="icon" type="image/png" href="/public/images/favicon.png" />
+    <link rel="apple-touch-icon" href="/public/images/touch-icon-iphone.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/public/images/touch-icon-ipad.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/public/images/touch-icon-iphone-retina.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/public/images/touch-icon-ipad-retina.png">
+
     <link href='http://fonts.googleapis.com/css?family=Bree+Serif' rel='stylesheet' type='text/css'>
     <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
 
@@ -20,7 +27,7 @@
     <script src="/bower_components/html5shiv/dist/html5shiv.js"></script>
     <![endif]-->
 
-    <!--<link rel="apple-touch-icon" href="/my-icon.png" /> make it 144x144 -->
+    <!-- make it 144x144 -->
 </head>
 <body>
     <header data-akin-header></header>
