Start of app page and tidying

--- a/src/web.public/index.html
+++ b/src/web.public/index.html
@@ -26,8 +26,6 @@
     <!--[if lt IE 9]>
     <script src="/bower_components/html5shiv/dist/html5shiv.js"></script>
     <![endif]-->
-
-    <!-- make it 144x144 -->
 </head>
 <body>
     <header data-akin-header></header>
@@ -38,6 +36,7 @@
     <script src="/bower_components/angular-route/angular-route.js"></script>
     <script src="/bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="/bower_components/angular-touch/angular-touch.js"></script>
+    <script src="/bower_components/angular-sanitize/angular-sanitize.js"></script>
     <!-- inject:appakin-scripts --><script src="/public/scripts/app-scripts.js"></script><!-- endinject -->
 </body>
 </html>
