--- a/src/web.public/public/scripts/appakin/pages/search-results/search-results.html
+++ b/src/web.public/public/scripts/appakin/pages/search-results/search-results.html
@@ -16,18 +16,17 @@
                     <li ng-repeat="category in search.results.items"
                         class="category-search-result">
                         <h4><a href="{{ url.createCategoryUrl(category.platform, category.url) }}">{{category.name}}</a></h4>
-                        <p>
-                            {{category.shortDesc}}
-                        </p>
+                        <!--<p>-->
+                            <!--{{category.shortDesc}}-->
+                        <!--</p>-->
                     </li>
                 </ul>
                 <ul ng-show="search.results.searchType === 'app'">
                     <li ng-repeat="app in search.results.items track by app.url"
                         class="app-search-result">
-                        <h4><a href="{{ url.createAppUrl(app.platform, app.url) }}">{{app.name}}</a></h4>
-                        <p>
-                            {{app.shortDesc}}
-                        </p>
+                        <img src="{{app.imageUrl}}" width="57px" height="57px">
+                        <h4><a href="{{ url.createAppUrl(app.platform, app.url) }}" ng-bind-html="app.name | trim: 50 | highlight: search.searchTerm"></a></h4>
+                        <p ng-bind-html="app.highlight"></p>
                     </li>
                 </ul>
             </div>
