Got search results page working with getting of data before controller runs

--- a/src/web.public/index.html
+++ b/src/web.public/index.html
@@ -32,7 +32,7 @@
     <header data-akin-header></header>
     <main>
         <span class="spinner-wrapper" us-spinner="{radius:15, width:6, length: 12}" spinner-key="loading"></span>
-        <div ng-view></div>
+        <div ng-view autoscroll="true"></div>
     </main>
     <footer data-akin-footer></footer>
 
