--- a/src/web.public/index.html
+++ b/src/web.public/index.html
@@ -29,7 +29,7 @@
 </head>
 <body>
 
-    <header data-akin-header></header>
+    <header data-akin-header id="header"></header>
     <main>
         <span class="spinner-wrapper" us-spinner="{radius:15, width:6, length: 12}" spinner-key="loading"></span>
         <div ng-view autoscroll="true"></div>
