--- a/src/web.public/public/scripts/appakin/pages/search-results/search-results.html
+++ b/src/web.public/public/scripts/appakin/pages/search-results/search-results.html
@@ -1,12 +1,12 @@
 <div id="search-results" class="main-wrapper" ng-cloak>
     <h1 class="search-type" ng-if="search.searchType == 'category'">Categories&nbsp;&nbsp;<a href="{{url.createSearchUrl(search.results.resultSearchTerm, 'app')}}">Click here for App results</a></h1>
     <h1 class="search-type" ng-if="search.searchType == 'app'">Apps&nbsp;&nbsp;<a href="{{url.createSearchUrl(search.results.resultSearchTerm, 'category')}}">Click here for Category results</a></h1>
-    <p class="error" ng-show="search.results.serverError && !search.searchInProgress">
+    <p class="error" ng-show="search.results.serverError">
         <span class="icon"></span>There was a problem getting your search result. Please try again, or if the problem persists please try later.
     </p>
-    <div class="no-error-wrapper" ng-hide="search.results.serverError">
+    <div class="no-error-wrapper" ng-if="!search.results.serverError">
         <p class="warning"
-           ng-show="search.results.items.length == 0 && !search.results.initialState && !search.searchInProgress">
+           ng-show="search.results.items.length == 0">
             <span class="icon"></span>No results found.<span ng-show="search.results.suggestion"><br/>Did you mean <a href="{{url.createSearchUrl(search.results.suggestion, search.searchType)}}">{{search.results.suggestion}}</a>?</span>
         </p>
         <div class="valid-results-wrapper" ng-show="search.results.items.length > 0">
