--- a/src/web.public/index.html
+++ b/src/web.public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
 	<meta name="language" content="english">
     <meta name="description" content="Search by category for great iOS apps.">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <base href="/">
 
 	<title data-ng-bind="pageTitle.pageTitle">appAkin</title>
