--- a/src/web.public/public/scripts/appakin/pages/app/app.html
+++ b/src/web.public/public/scripts/appakin/pages/app/app.html
@@ -4,7 +4,7 @@
     </p>
     <div class="no-error-wrapper" ng-if="!app.data.serverError">
         <h1>{{app.data.censoredName}}</h1>
-        <a class="app-icon" href="{{ app.data.storeUrl }}" target="_blank">
+        <a class="app-icon" href="{{ app.data.storeUrl }}" target="{{ getLinkTarget() }}">
             <img src="{{ url.createAppleAppStoreImageUrl(app.data.artworkMediumUrl, 175) }}" width="175px" height="175px">
         </a>
         <div class="basic-info">
@@ -20,13 +20,13 @@
             <p class="supported-devices">
                 <span class="device" ng-repeat="device in getSupportedDevices(app.data.supportedDevices)">{{device}}</span>
             </p>
-            <a class="download-button" href="{{ app.data.storeUrl }}" target="_blank">
+            <a class="download-button" href="{{ app.data.storeUrl }}" target="{{ getLinkTarget() }}">
                 <!-- Do fallback: <img src="image.svg" onerror="this.onerror=null; this.src='image.png'">-->
                 <img src="/public/images/Download_on_the_App_Store_Badge_US-UK_135x40.svg">
             </a>
         </div>
         <div class="technical-info">
-            <p class="seller">By {{app.data.sellerName}}</p>
+            <p class="seller"><span class="label">By</span>&nbsp;{{app.data.sellerName}}</p>
             <p class="age-rating"><span class="label">Advisory rating</span>&nbsp;{{app.data.advisoryRating}} years</p>
             <p class="language"><span class="label">Size</span>&nbsp;{{formatSize(app.data.fileSizeBytes)}}</p>
             <p class="os-version"><span class="label">Minimum iOS version</span>&nbsp;{{app.data.minOsVersion}}</p>
@@ -37,38 +37,41 @@
             <div ng-show="display.fullDescription">
                 <p class="body-text" ng-bind-html="app.data.description | formatDescription"></p>
                 <a class="less basic" href ng-click="toggleFullDescription()"><span></span></a>
-                <!--<button type="button" ng-click="toggleFullDescription()">Less</button>-->
             </div>
             <div ng-hide="display.fullDescription">
-                <p class="body-text" ng-bind-html="app.data.description | firstParagraph | formatDescription"></p>
-                <a class="more basic" href ng-click="toggleFullDescription()"><span></span></a>
-                <!--<button type="button" ng-click="toggleFullDescription()">More</button>-->
+                <p class="body-text" ng-bind-html="app.data.firstParagraph | formatDescription"></p>
+                <a class="more basic" href ng-click="toggleFullDescription()"
+                   ng-hide="app.data.firstParagraph === app.data.description"><span></span></a>
             </div>
         </div>
-        <div class="app-categories">
+        <div class="app-categories" ng-if="app.data.categories.length > 0">
             <h2>Related Categories</h2>
-            <ul ng-if="app.data.categories.length > 0">
+            <ul>
                 <li ng-repeat="category in app.data.categories">
                     <h4><a class="body-link" href="{{ url.createCategoryUrl(app.data.platform, category.url) }}">{{category.name}}</a></h4>
                 </li>
             </ul>
         </div>
         <div class="screen-shots">
-            <div ng-if="app.data.screenShotUrls.length > 0" class="screen-shot-wrapper">
+            <div ng-if="app.data.screenShotUrls.length > 0">
                 <h2>iPhone Screen Shots</h2>
-                <ul rn-carousel rn-carousel-buffered rn-carousel-control>
-                    <li ng-repeat="screenShotUrl in app.data.screenShotUrls">
-                        <img src="{{screenShotUrl}}">
-                    </li>
-                </ul>
+                <div class="screen-shot-wrapper">
+                    <ul rn-carousel rn-carousel-buffered rn-carousel-control>
+                        <li ng-repeat="screenShotUrl in app.data.screenShotUrls">
+                            <img src="{{screenShotUrl}}">
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <div ng-if="app.data.ipadScreenShotUrls.length > 0" class="screen-shot-wrapper">
+            <div ng-if="app.data.ipadScreenShotUrls.length > 0">
                 <h2>iPad Screen Shots</h2>
-                <ul rn-carousel rn-carousel-buffered rn-carousel-control>
-                    <li ng-repeat="screenShotUrl in app.data.ipadScreenShotUrls">
-                        <img src="{{screenShotUrl}}">
-                    </li>
-                </ul>
+                <div class="screen-shot-wrapper">
+                    <ul rn-carousel rn-carousel-buffered rn-carousel-control>
+                        <li ng-repeat="screenShotUrl in app.data.ipadScreenShotUrls">
+                            <img src="{{screenShotUrl}}">
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
