--- a/src/web.public/public/scripts/appakin/pages/app/app.html
+++ b/src/web.public/public/scripts/appakin/pages/app/app.html
@@ -4,45 +4,48 @@
     </p>
     <div class="no-error-wrapper" ng-if="!app.data.serverError">
         <h1>{{app.data.censoredName}}</h1>
-        <a class="app-icon" href="{{ app.data.storeUrl }}" target="{{ getLinkTarget() }}">
-            <img src="{{ url.createAppleAppStoreImageUrl(app.data.artworkMediumUrl, 175) }}" width="175px" height="175px">
-        </a>
-        <div class="basic-info">
-            <p class="price">{{formatPrice(app.data.price)}}</p>
-            <div class="rating">
-                <p>Current Rating</p>
-                <div akin-score score="app.data.userRatingCurrent" votes="app.data.ratingCountCurrent"></div>
-            </div>
-            <div class="rating">
-                <p>Overall Rating</p>
-                <div akin-score score="app.data.userRating" votes="formatVoteCount(app.data.ratingCount)"></div>
-            </div>
-            <p class="supported-devices">
-                <span class="device" ng-repeat="device in getSupportedDevices(app.data.supportedDevices)">{{device}}</span>
-            </p>
-            <a class="download-button" href="{{ app.data.storeUrl }}" target="{{ getLinkTarget() }}">
-                <!-- Do fallback: <img src="image.svg" onerror="this.onerror=null; this.src='image.png'">-->
-                <img src="/public/images/Download_on_the_App_Store_Badge_US-UK_135x40.svg">
+        <div class="basic-info-wrapper">
+            <a class="app-icon" href="{{ app.data.storeUrl }}" target="{{ getLinkTarget() }}">
+                <img src="{{ url.createAppleAppStoreImageUrl(app.data.artworkMediumUrl, 175) }}" width="175px" height="175px">
             </a>
-        </div>
-        <div class="technical-info">
-            <p class="seller"><span class="label">By</span>&nbsp;{{app.data.sellerName}}</p>
-            <p class="age-rating"><span class="label">Advisory rating</span>&nbsp;{{app.data.advisoryRating}} years</p>
-            <p class="language"><span class="label">Size</span>&nbsp;{{formatSize(app.data.fileSizeBytes)}}</p>
-            <p class="os-version"><span class="label">Minimum iOS version</span>&nbsp;{{app.data.minOsVersion}}</p>
-            <p class="last-updated"><span class="label">Last updated</span>&nbsp;{{formatDate(app.data.dateModified)}}</p>
+            <div class="basic-info">
+                <p class="price">{{formatPrice(app.data.price)}}</p>
+                <div class="rating">
+                    <p>Current Rating</p>
+                    <div akin-score score="app.data.userRatingCurrent" votes="app.data.ratingCountCurrent"></div>
+                </div>
+                <div class="rating">
+                    <p>Overall Rating</p>
+                    <div akin-score score="app.data.userRating" votes="formatVoteCount(app.data.ratingCount)"></div>
+                </div>
+                <p class="supported-devices">
+                    <span class="device" ng-repeat="device in getSupportedDevices(app.data.supportedDevices)">{{device}}</span>
+                </p>
+                <a class="download-button" href="{{ app.data.storeUrl }}" target="{{ getLinkTarget() }}">
+                    <!-- Do fallback: <img src="image.svg" onerror="this.onerror=null; this.src='image.png'">-->
+                    <img src="/public/images/Download_on_the_App_Store_Badge_US-UK_135x40.svg">
+                </a>
+            </div>
         </div>
         <div class="description">
-            <h2>Description</h2>
+            <!--<h2>Description</h2>-->
             <div ng-show="display.fullDescription">
                 <p class="body-text" ng-bind-html="app.data.description | formatDescription"></p>
                 <a class="less basic" href ng-click="toggleFullDescription()"><span></span></a>
             </div>
             <div ng-hide="display.fullDescription">
-                <p class="body-text" ng-bind-html="app.data.firstParagraph | formatDescription"></p>
+                <p class="body-text" ng-bind-html="app.data.firstSection | formatDescription"></p>
                 <a class="more basic" href ng-click="toggleFullDescription()"
-                   ng-hide="app.data.firstParagraph === app.data.description"><span></span></a>
+                   ng-hide="app.data.firstSection === app.data.description"><span></span></a>
             </div>
+        </div>
+        <div class="technical-info">
+            <h2>Details</h2>
+            <p class="seller"><span class="label">By</span>&nbsp;{{app.data.sellerName}}</p>
+            <p class="age-rating"><span class="label">Parental rating</span>&nbsp;{{app.data.advisoryRating}} years</p>
+            <p class="language"><span class="label">Size</span>&nbsp;{{formatSize(app.data.fileSizeBytes)}}</p>
+            <p class="os-version"><span class="label">Minimum iOS version</span>&nbsp;{{app.data.minOsVersion}}</p>
+            <p class="last-updated"><span class="label">Last updated</span>&nbsp;{{formatDate(app.data.dateModified)}}</p>
         </div>
         <div class="app-categories" ng-if="app.data.categories.length > 0">
             <h2>Related Categories</h2>
