--- a/src/web.public/public/scripts/appakin/pages/search-results/search-results.html
+++ b/src/web.public/public/scripts/appakin/pages/search-results/search-results.html
@@ -25,7 +25,7 @@
                         class="app-search-result">
                         <a href="{{ url.createAppUrl(app.platform, app.url) }}" ><img src="{{app.imageUrl}}" width="57px" height="57px"></a>
                         <h4><a href="{{ url.createAppUrl(app.platform, app.url) }}" ng-bind-html="app.name | trim: 50 | highlight: search.searchTerm"></a></h4>
-                        <p ng-bind-html="app.highlight"></p>
+                        <p class="tight-lines" ng-bind-html="app.highlight"></p>
                     </li>
                 </ul>
             </div>
