--- a/src/web.public/public/scripts/appakin/pages/app/app.html
+++ b/src/web.public/public/scripts/appakin/pages/app/app.html
@@ -4,83 +4,98 @@
     </p>
     <div class="no-error-wrapper" ng-if="!app.data.serverError">
         <h1>{{app.data.censoredName}}</h1>
-        <div class="basic-info-wrapper">
+        <div class="sidebar">
+            <a class="app-icon-wrapper" href="{{ app.data.storeUrl }}" target="{{ getLinkTarget() }}">
+                <img class="app-icon" src="{{ url.createAppleAppStoreImageUrl(app.data.artworkMediumUrl, 175) }}">
+                <!--<img class="app-store-icon" src="/public/images/Download_on_the_App_Store_Badge_US-UK_135x40.svg">-->
+            </a>
             <div class="basic-info">
-                <a class="app-icon" href="{{ app.data.storeUrl }}" target="{{ getLinkTarget() }}">
-                    <img src="{{ url.createAppleAppStoreImageUrl(app.data.artworkMediumUrl, 175) }}">
-                </a>
-                <p class="price">{{formatPrice(app.data.price)}}</p>
-                <div class="rating">
-                    <p>Current Rating</p>
+                <p class="price highlighted">{{formatPrice(app.data.price)}}</p>
+                <div class="rating sidebar-section" ng-if="app.data.userRatingCurrent">
+                    <h6>Current Rating</h6>
                     <div akin-score score="app.data.userRatingCurrent" votes="app.data.ratingCountCurrent"></div>
                 </div>
-                <div class="rating">
-                    <p>Overall Rating</p>
+                <div class="rating sidebar-section" ng-if="app.data.userRating">
+                    <h6>Overall Rating</h6>
                     <div akin-score score="app.data.userRating" votes="formatVoteCount(app.data.ratingCount)"></div>
                 </div>
-                <p class="supported-devices">
-                    <span class="device" ng-repeat="device in getSupportedDevices(app.data.supportedDevices)">{{device}}</span>
-                </p>
+                <div class="age-rating single-line-sidebar-section">
+                    <h6>Age Rating</h6>
+                    <p>{{app.data.advisoryRating}}</p>
+                </div>
+                <!--<div class="sidebar-section">-->
+                    <!--<h6>Size</h6>-->
+                    <!--<p>{{formatSize(app.data.fileSizeBytes)}}</p>-->
+                <!--</div>-->
+                <div class="ios-version single-line-sidebar-section">
+                    <h6>iOS Version</h6>
+                    <p>{{app.data.minOsVersion}}+</p>
+                </div>
+                <!--<div class="sidebar-section">-->
+                    <!--<h6>Last Updated</h6>-->
+                    <!--<p>{{formatDate(app.data.dateModified)}}</p>-->
+                <!--</div>-->
+                <div class="supported-devices sidebar-section">
+                    <span class="device tag-border" ng-repeat="device in getSupportedDevices(app.data.supportedDevices)">{{device}}</span>
+                </div>
                 <a class="download-button" href="{{ app.data.storeUrl }}" target="{{ getLinkTarget() }}">
                     <!-- Do fallback: <img src="image.svg" onerror="this.onerror=null; this.src='image.png'">-->
                     <img src="/public/images/Download_on_the_App_Store_Badge_US-UK_135x40.svg">
                 </a>
             </div>
-            <img class="app-screenshot img-border" ng-if="app.data.screenShotUrl"
-                 src="{{app.data.screenShotUrl}}">
         </div>
-        <div class="description">
-            <!--<h2>Description</h2>-->
-            <div ng-show="display.fullDescription">
-                <p class="body-text" ng-bind-html="app.data.description | formatDescription"></p>
-                <!--<a class="less basic" href ng-click="toggleFullDescription()"><span></span></a>-->
-            </div>
-            <div ng-hide="display.fullDescription">
-                <p class="body-text" ng-bind-html="app.data.firstSection | formatDescription"></p>
-                <a class="more basic" href ng-click="toggleFullDescription()"
-                   ng-hide="app.data.firstSection === app.data.description"><span></span></a>
-            </div>
-            <a class="download-button" href="{{ app.data.storeUrl }}" target="{{ getLinkTarget() }}">
-                <!-- Do fallback: <img src="image.svg" onerror="this.onerror=null; this.src='image.png'">-->
-                <img src="/public/images/Download_on_the_App_Store_Badge_US-UK_135x40.svg">
-            </a>
-        </div>
-        <div class="technical-info">
-            <h2>Details</h2>
-            <p class="seller"><span class="label">By</span>&nbsp;{{app.data.sellerName}}</p>
-            <p class="age-rating"><span class="label">Parental rating</span>&nbsp;{{app.data.advisoryRating}} years</p>
-            <p class="language"><span class="label">Size</span>&nbsp;{{formatSize(app.data.fileSizeBytes)}}</p>
-            <p class="os-version"><span class="label">Minimum iOS version</span>&nbsp;{{app.data.minOsVersion}}</p>
-            <p class="last-updated"><span class="label">Last updated</span>&nbsp;{{formatDate(app.data.dateModified)}}</p>
-        </div>
-        <div class="app-categories" ng-if="app.data.categories.length > 0">
-            <h2>Related Categories</h2>
-            <ul>
-                <li ng-repeat="category in app.data.categories">
-                    <h4><a class="body-link" href="{{ url.createCategoryUrl(app.data.platform, category.url) }}">{{category.name}}</a></h4>
-                </li>
-            </ul>
-        </div>
-        <div class="screen-shots">
-            <div ng-if="app.data.screenShotUrls.length > 0">
-                <h2>iPhone Screen Shots</h2>
-                <div class="screen-shot-wrapper">
-                    <ul rn-carousel rn-carousel-buffered rn-carousel-control>
-                        <li ng-repeat="screenShotUrl in app.data.screenShotUrls">
-                            <img src="{{screenShotUrl}}">
-                        </li>
-                    </ul>
+        <div class="body-wrapper">
+            <div class="description">
+                <!--<h2>Description</h2>-->
+                <div ng-show="display.fullDescription">
+                    <p class="body-text" ng-bind-html="app.data.description | formatDescription"></p>
+                    <!--<a class="less basic" href ng-click="toggleFullDescription()"><span></span></a>-->
+                </div>
+                <div ng-hide="display.fullDescription">
+                    <p class="body-text" ng-bind-html="app.data.firstSection | formatDescription"></p>
+                    <a class="more basic" href ng-click="toggleFullDescription()"
+                       ng-hide="app.data.firstSection === app.data.description"><span></span></a>
                 </div>
             </div>
-            <div ng-if="app.data.ipadScreenShotUrls.length > 0">
-                <h2>iPad Screen Shots</h2>
-                <div class="screen-shot-wrapper">
-                    <ul rn-carousel rn-carousel-buffered rn-carousel-control>
-                        <li ng-repeat="screenShotUrl in app.data.ipadScreenShotUrls">
-                            <img src="{{screenShotUrl}}">
-                        </li>
-                    </ul>
+            <div class="screen-shots">
+                <div class="iphone-screen-shots" ng-if="app.data.screenShotUrls.length > 0">
+                    <h2>iPhone Screen Shots</h2>
+                    <div class="screen-shot-wrapper img-border">
+                        <ul rn-carousel rn-carousel-buffered rn-carousel-control>
+                            <li ng-repeat="screenShotUrl in app.data.screenShotUrls">
+                                <img src="{{screenShotUrl}}">
+                            </li>
+                        </ul>
+                    </div>
                 </div>
+                <div class="ipad-screen-shots" ng-if="app.data.ipadScreenShotUrls.length > 0">
+                    <h2>iPad Screen Shots</h2>
+                    <div class="screen-shot-wrapper img-border">
+                        <ul rn-carousel rn-carousel-buffered rn-carousel-control>
+                            <li ng-repeat="screenShotUrl in app.data.ipadScreenShotUrls">
+                                <img src="{{screenShotUrl}}">
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <!--<a class="download-button" href="{{ app.data.storeUrl }}" target="{{ getLinkTarget() }}">-->
+                <!--&lt;!&ndash; Do fallback: <img src="image.svg" onerror="this.onerror=null; this.src='image.png'">&ndash;&gt;-->
+                <!--<img src="/public/images/Download_on_the_App_Store_Badge_US-UK_135x40.svg">-->
+            <!--</a>-->
+            <div class="app-categories" ng-if="app.data.categories.length > 0">
+                <h2>Related Categories</h2>
+                <ul>
+                    <li ng-repeat="category in app.data.categories">
+                        <h4><a class="body-link" href="{{ url.createCategoryUrl(app.data.platform, category.url) }}">{{category.name}}</a></h4>
+                    </li>
+                </ul>
+            </div>
+            <div class="technical-info">
+                <h2>Details</h2>
+                <p class="seller"><span class="label">By</span>&nbsp;{{app.data.sellerName}}</p>
+                <p class="language"><span class="label">Size</span>&nbsp;{{formatSize(app.data.fileSizeBytes)}}</p>
+                <p class="last-updated"><span class="label">Last updated</span>&nbsp;{{formatDate(app.data.dateModified)}}</p>
             </div>
         </div>
     </div>
